# marketplace-pipeline

./: .env.example  .env.scale.example  .gitignore  AGENTS.md  AI_USAGE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  vision.md
.cursor/rules/: clean-architecture.mdc  crm-idempotency.mdc  marketplace-pipeline-core.mdc  parser.mdc  python-tests.mdc
.cursor/skills/marketplace-pipeline/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_pipeline_jobs.py  002_enriched_product_snapshots.py
docs/: ARCHITECTURE.md  CLEAN_ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  ENV.md  HR_DEMO.md  REVIEWER_GUIDE.md  SCALE.md  TESTING.md
src/marketplace_pipeline/: __init__.py  config.py  http_client.py  main.py  models.py  pipeline.py  selectors.py
src/marketplace_pipeline/application/dto/: pipeline_result.py
src/marketplace_pipeline/crm/: amocrm.py  idempotency.py
src/marketplace_pipeline/domain/: __init__.py  exceptions.py
src/marketplace_pipeline/infrastructure/: __init__.py
src/marketplace_pipeline/llm/: classifier.py
src/marketplace_pipeline/parser/: base.py  factory.py  mock.py  ozon.py
tests/: conftest.py  helpers.py  test_api.py  test_coverage.py  test_crm.py  test_idempotency.py  test_job_repository.py  test_job_runner.py  test_llm.py  test_main.py  test_ozon_collect.py  test_ozon_http.py  test_parser.py  test_pipeline.py  test_prod_hardening.py  test_proxy_market_quota.py  test_scale.py
tests/domain/: test_domain_services.py
(+66 files in other folders)
